--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "KVideo - 视频聚合平台",
-    "short_name": "KVideo",
+    "name": "TVideo - 视频聚合平台",
+    "short_name": "TVideo",
     "description": "多源视频聚合搜索和播放平台",
     "start_url": "/",
     "display": "standalone",
